fix link spacing

--- a/src/render/html/res/style.css
+++ b/src/render/html/res/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: sans-serif;
     font-size: 18px;
 
     margin: 0;
